stash was applied

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <p>hello world</p>
     <p>hello world</p>
     <p>hello world</p>
+
+    <section>
+        <div>
+            <h1>let's us verify this stash command</h1>
+        </div>
+    </section>
     
 </body>
 </html>
